modules/aws-resource/vpc/igw.tf
resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name  = "devops-igw"
    Owner = var.owner
    nuke = "skip"
  }
}
